<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EES</string>
    <string name="title_activity_splash_screen">EES</string>
    <string name="getStarted">Lancer l\'application</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home fragment</string>
    <string name="map_fragment">Map fragment</string>
    <string name="about_fragment">About fragment</string>
    <string name="school_label">Libellé</string>
    <string name="required">Champ obligatoire</string>
    <string name="sigle_label">sigle</string>
    <string name="libelle">Libellé</string>
    <string name="school_type">Type</string>
    <string name="add">Ajouter</string>
    <string name="school_sector">Secteur</string>
    <string name="school_vague">Vague</string>
    <string name="geolocalisation_X">X</string>
    <string name="geolocalisation_Y">Y</string>
    <string name="date_creation">Date de création</string>
    <string name="school_department">Département</string>
    <string name="school_region">Région</string>
    <string name="school_adress">"Adresse "</string>
    <string name="codePostal">Code postal</string>
    <string name="school_website">Site Web</string>
    <string name="school_fb">Compte Facebook</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="delete">delete</string>
    <string name="fragment_about">EES (Etablissemnts d\'Enseignement Supérieur) vous permet de trouver les principaux établissement d\'enseignement supérieur et les géocaliser. Pour mettre en place ce projet nous avons utilisé :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="vague">
        <item>crane</item>
        <item>Cuckoo</item>
        <item>Pigeon</item>
        <item>Eagle</item>
        <item>Owl</item>
        <item>Vulture</item>
        <item>WoodPecker</item>
    </string-array>

    <string name="api_link" tools:ignore="TypographyDashes">Lien API : https://app-cb40d835-d4b4-407f-83a6-0452ebe04576.cleverapps.io/schools</string>
    <string name="dataset_link" tools:ignore="TypographyDashes">Lien base de données : https://data.opendatasoft.com/explore/dataset/fr-esr-principaux-etablissements-enseignement-superieur%40mesr/api/?disjunctive.type_d_etablissement&amp;sort=uo_lib&amp;disjunctive.typologie_d_universites_et_assimiles</string>
    <string name="backButton">Retour à la page principale</string>
    <string name="numTel">Numéro de téléphone</string>
    <string name="create_school">Create School</string>
    <!-- link for practice textview-->
</resources>