<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/fragment_about"
        android:layout_width="309dp"
        android:layout_height="154dp"
        android:layout_marginTop="116dp"
        android:text="@string/fragment_about"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="normal"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/api_url"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="172dp"
        android:text="@string/api_link"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="italic"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_about" />

    <TextView
        android:id="@+id/dataset_url"
        android:layout_width="309dp"
        android:layout_height="154dp"
        android:layout_marginTop="72dp"
        android:text="@string/dataset_link"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="italic"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/api_url" />

</androidx.constraintlayout.widget.ConstraintLayout>